增加了项目,添加了pom

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /.idea
 /hadoopstudy/*.iml
+/stormstudy/*.iml
+/redisstudy/*.iml
+/toolsstudy/*.iml
+/hbasestudy/*.iml
+/.idea/*.iml
+/telecomstudy/*.iml
+/esstudy/*.iml
+/sparkstudy/*.iml
